# robot_tracking

./: README.md  ardu.ino  esp.ino  esp32.ino.ino  esp32_webcontrol_jin.ino  package.xml  setup.cfg  setup.py  tracking_ardu.ino.ino  tracking_ardu_jin.ino  tracking_world.sdf
config/: esp_ip.yaml
launch/: tracking_launch.py
static/: script.js
templates/: index.html
tracking_pj/: aruco_node.py  aruco_pos.py  calch.py  calibration.py  calibration_data.npz  calibration_data.npz.bak  gz_aruco_pos.py  gz_tracking_node.py  serial_bridge_node.py  target_serial_bridge_node.py  tracking_node.py  webcam_node.py
